# feather

./: .gitignore  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  Drawable.cpp  Drawable.h  Makefile  Material.cpp  Material.h  Planet.cpp  Planet.h  README.md  Scene.h  Triangle.cpp  Triangle.h  build.sh  main.cpp
.github/workflows/: build.yml  codeql.yml
assets/models/: banana.mtl
assets/models/dress/: untitled.blend  untitled.blend1  untitled.mtl
assets/shaders/colorCorrection/: fragment.glsl  vertex.glsl
assets/shaders/compute/: test.glsl
assets/shaders/default/: fragment.glsl  vertex.glsl
assets/shaders/depth/: fragment.glsl  vertex.glsl
assets/shaders/depthPostProcess/: fragment.glsl  vertex.glsl
assets/shaders/invertPostProcess/: fragment.glsl  vertex.glsl
assets/shaders/pbr/: fragment.glsl  vertex.glsl
assets/shaders/standard/: fragment.glsl  vertex.glsl
core/: AABB.h  AABBHelper.h  Camera.cpp  Camera.h  ComputePostProcess.h  Engine.cpp  Engine.h  PickResult.h  PostProcess.h  Renderable.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Shader.h  Transform.cpp  Transform.h  Transformable.h  WgpuContext.h  postprocessing.cpp  postprocessing.h
core/cameras/: Camera.cpp  Camera.h  FreeCamera.cpp  FreeCamera.h  OrbitCamera.cpp  OrbitCamera.h
core/lights/: DebugLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
core/materials/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  DefaultMaterial.cpp  DefaultMaterial.h  DepthMaterial.h  Material.cpp  Material.h  PbrMaterial.h  PhongMaterial.cpp  PhongMaterial.h  StandardMaterial.cpp  StandardMaterial.h  Texture.cpp  Texture.h
core/meshes/: AbstractMesh.cpp  AbstractMesh.h  Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  MeshBuilder.h  MeshLoader.h  ScreenQuad.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  VertexData.h
core/physics/: AABB.h  AreaConstraint.h  BendConstraint.h  Cloth.h  ClothBalloonConstraint.h  CollisionConstraint.h  Constraint.h  ConstraintHelper.h  DihedralBendConstraint.h  DistanceConstraint.h  FastBendConstraint.h  FixedConstraint.h  GeneralizedVolumeConstraint.h  GlobalVolumeConstraint.h  HXPbdSolver.h  HpbdSolver.h  IsometricBendConstraint.h  Particle.h  PhysicsBody.h  PhysicsBodyHelper.h  RigidBody.h  SelfCollisionConstraint.h  SoftBody.h  StretchConstraint.h  UniformAccelerationField.h  VolumeConstraint.h
core/shadows/: ShadowRenderer.h
core/utils/: ComputeShader.h  Observable.cpp  Observable.h  Uuid.h  stb_image.h  utils.cpp  utils.h
core/webgpu/: Adapter.cpp  Adapter.h  WgpuContext.h  WgpuUtils.cpp  WgpuUtils.h
drawables/: Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  Sphere.cpp  Sphere.h  Triangle.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
materials/: DefaultMaterial.cpp  DefaultMaterial.h  Material.cpp  Material.h  StandardMaterial.cpp  StandardMaterial.h  Texture.cpp  Texture.h
shaders/default/: fragment.glsl  vertex.glsl
utils/: Vector3.cpp  Vector3.h  utils.cpp  utils.h
